Fix metrics variables

--- a/helper/_spacing.scss
+++ b/helper/_spacing.scss
@@ -3,7 +3,7 @@
 // ============================================================================
 
 
-@each $size-id, $size-value in $metric-block-size {
+@each $size-id, $size-value in $metrics-block-size {
 
 
   // Margins
