--- a/settings/_metrics.scss
+++ b/settings/_metrics.scss
@@ -2,7 +2,7 @@
 // Metrics
 // ============================================================================
 
-$metric-block-size: (
+$metrics-block-size: (
    xs: 5px,
     s: 10px,
     m: 15px,
@@ -11,7 +11,7 @@ $metric-block-size: (
   xxl: 75px
 );
 
-$metric-radius: (
+$metrics-radius: (
     s: 2px,
     m: 4px,
     l: 8px,
