Add ITCSS layer info to all partials

--- a/base/_common.scss
+++ b/base/_common.scss
@@ -1,5 +1,5 @@
 // ============================================================================
-// Base styles for most common elements
+// Base: common
 // ============================================================================
 
 html {
