--- a/generic/_reset.scss
+++ b/generic/_reset.scss
@@ -1,5 +1,5 @@
 // ============================================================================
-// Reset
+// Generic: Reset
 // ============================================================================
 
 html, body, div, span, applet, object, iframe,
