--- a/helper/_state.scss
+++ b/helper/_state.scss
@@ -1,5 +1,5 @@
 // ============================================================================
-// State helper
+// Helper: State
 // ============================================================================
 
 
