--- a/settings/_fonts.scss
+++ b/settings/_fonts.scss
@@ -1,5 +1,5 @@
 // ============================================================================
-// Font settings
+// Settings: Fonts
 // ============================================================================
 
 $font-stack-standard: Arial, Helvetica, Verdana, sans-serif;
