--- a/settings/_media-queries.scss
+++ b/settings/_media-queries.scss
@@ -1,5 +1,5 @@
 // ============================================================================
-// Media query settings
+// Settings: Media queries
 // ============================================================================
 
 $breakpoint-widescreens-min:  1441px;
