--- a/settings/_metrics.scss
+++ b/settings/_metrics.scss
@@ -1,5 +1,5 @@
 // ============================================================================
-// Metrics
+// Settings: Metrics
 // ============================================================================
 
 $metrics-block-size: (
