--- a/settings/_susy.scss
+++ b/settings/_susy.scss
@@ -1,5 +1,5 @@
 // ============================================================================
-// Susy settings
+// Settings: Susy
 // ============================================================================
 
 $susy-enable-legacy-media-fallback: false !default;
