--- a/tools/_mixins.scss
+++ b/tools/_mixins.scss
@@ -1,5 +1,5 @@
 // ============================================================================
-// Mixins
+// Tools: Mixins
 // ============================================================================
 
 @mixin pie-clearfix {
