--- a/base/_forms.scss
+++ b/base/_forms.scss
@@ -1,3 +1,3 @@
 // ============================================================================
-// Form base styles
+// Base: Forms
 // ============================================================================
