--- a/base/_typography.scss
+++ b/base/_typography.scss
@@ -1,3 +1,3 @@
 // ============================================================================
-// Typography base styles
+// Base: Typography
 // ============================================================================
