--- a/helper/_spacing.scss
+++ b/helper/_spacing.scss
@@ -1,5 +1,5 @@
 // ============================================================================
-// Spacing
+// Helper: Spacing
 // ============================================================================
 
 
