Add classes to remove spacing

--- a/helper/_spacing.scss
+++ b/helper/_spacing.scss
@@ -3,11 +3,10 @@
 // ============================================================================
 
 
+// Margins
+// --------------------------------------------------------------------------
+
 @each $size-id, $size-value in $metrics-block-size {
-
-
-  // Margins
-  // --------------------------------------------------------------------------
 
   // All sides
   .h-m-#{$size-id} {
@@ -40,15 +39,56 @@
     margin-bottom: $size-value !important;
   }
 
-  // Left and right margin
+  // Right and left margin
   .h-h-m-#{$size-id} {
-    margin-left: $size-value !important;
     margin-right: $size-value !important;
+    margin-left: $size-value !important;
   }
 
+}
 
-  // Padding
-  // --------------------------------------------------------------------------
+// Remove all margins
+.h-no-m {
+  margin: 0 !important;
+}
+
+// Remove top margin
+.h-no-t-m {
+  margin-top: 0 !important;
+}
+
+// Remove right margin
+.h-no-r-m {
+  margin-right: 0 !important;
+}
+
+// Remove bottom margin
+.h-no-b-m {
+  margin-bottom: 0 !important;
+}
+
+// Remove left margin
+.h-no-l-m {
+  margin-left: 0 !important;
+}
+
+// Remove top and bottom margin
+.h-no-v-m {
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
+}
+
+// Remove right and left margin
+.h-no-h-m {
+  margin-right: 0 !important;
+  margin-left: 0 !important;
+}
+
+
+// Padding
+// --------------------------------------------------------------------------
+
+@each $size-id, $size-value in $metrics-block-size {
 
   // All sides
   .h-p-#{$size-id} {
@@ -81,10 +121,47 @@
     padding-bottom: $size-value !important;
   }
 
-  // Left and right padding
+  // Right and left padding
   .h-h-p-#{$size-id} {
     padding-left: $size-value !important;
     padding-right: $size-value !important;
   }
 
+}
+
+// Remove all padding
+.h-no-p {
+  padding: 0 !important;
+}
+
+// Remove top padding
+.h-no-t-p {
+  padding-top: 0 !important;
+}
+
+// Remove right padding
+.h-no-r-p {
+  padding-right: 0 !important;
+}
+
+// Remove bottom padding
+.h-no-b-p {
+  padding-bottom: 0 !important;
+}
+
+// Remove left padding
+.h-no-l-p {
+  padding-left: 0 !important;
+}
+
+// Remove top and bottom padding
+.h-no-v-p {
+  padding-top: 0 !important;
+  padding-bottom: 0 !important;
+}
+
+// Remove right and left padding
+.h-no-h-p {
+  padding-right: 0 !important;
+  padding-left: 0 !important;
 }
