--- a/_imports.scss
+++ b/_imports.scss
@@ -62,5 +62,6 @@
 // often using !important
 // ----------------------------------------------------------------------------
 
+@import 'helper/layout';
 @import 'helper/spacing';
 @import 'helper/state';
