Add boilerplate typography styles

--- a/base/_typography.scss
+++ b/base/_typography.scss
@@ -1,3 +1,59 @@
 // ============================================================================
 // Base: Typography
 // ============================================================================
+
+
+// Headlines
+// ----------------------------------------------------------------------------
+
+h1 {}
+
+h2 {}
+
+h3 {}
+
+h4 {}
+
+
+// Block elements
+// ----------------------------------------------------------------------------
+
+p {}
+
+blockquote {
+  margin: 0;
+  padding: 0;
+}
+
+cite {}
+
+pre, code {
+  font-family: monospace;
+}
+
+
+// Inline elements
+// ----------------------------------------------------------------------------
+
+strong {
+  font-weight: 700;
+}
+
+em {
+  font-weight: 400;
+  font-style: normal;
+}
+
+small {
+  font-size: font-size(s);
+}
+
+mark {}
+
+i {
+  font-style: normal !important;
+}
+
+b {
+  font-weight: normal !important;
+}
